# DoST

./: .gitignore  CMakeLists.txt  README.md  burn  compile  debug
.dost.conf/: config  dost_system_config.cmake  rdm.service  rdm.socket
ST/STM32F4/: CMakeLists.txt
ST/STM32F4/STM32F407ZGT6/: CMakeLists.txt
ST/STM32F4/STM32F407ZGT6/Drivers/: CMakeLists.txt  led.c
ST/STM32F4/STM32F407ZGT6/Inc/: stm32f4xx_hal_conf.h
ST/STM32F4/STM32F407ZGT6/User/: CMakeLists.txt  main.c
ST/STM32F7/: CMakeLists.txt
ST/STM32F7/STM32F767/: CMakeLists.txt
ST/STM32F7/STM32F767/Inc/: led.h  main.h  stm32f7xx_hal_conf.h  stm32f7xx_it.h
ST/STM32F7/STM32F767/User/: CMakeLists.txt  main.c  stm32f7xx_hal_msp.c  stm32f7xx_it.c  system_stm32f7xx.c
core/: ReadMe.md
core/Scripts/: FindCMSIS.cmake  FindSTM32HAL.cmake  FindSTM32SYSTEM.cmake  STM32F767IGT6_FLASH.ld  stm32_functions_and_macros.cmake  stm32_system_index.cmake  toolchain_stm32.cmake  toolchain_stm32f4.cmake  toolchain_stm32f7.cmake
core/ToolKits/: CMakeLists.txt
core/ToolKits/SYSTEM/Inc/: delay.h  sys.h  usart.h
core/ToolKits/SYSTEM/Src/: delay.c  newlib.c  sys.c  usart.c
core/gcc-arm-none-eabi-6-2017-q2-update/lib/: libcc1.so.0.0.0
core/gcc-arm-none-eabi-6-2017-q2-update/lib/gcc/arm-none-eabi/6.3.1/: collect2  liblto_plugin.so.0.0.0  lto-wrapper
core/gcc-arm-none-eabi-6-2017-q2-update/lib/gcc/arm-none-eabi/6.3.1/install-tools/: fixincl  mkheaders
core/gcc-arm-none-eabi-6-2017-q2-update/lib/gcc/arm-none-eabi/6.3.1/plugin/: gengtype  gtype.state  libcc1plugin.so.0.0.0
core/gcc-arm-none-eabi-6-2017-q2-update/lib/gcc/arm-none-eabi/6.3.1/plugin/include/: auto-host.h  configargs.h  insn-codes.h  insn-flags.h  plugin-version.h  tm-preds.h
core/gcc-arm-none-eabi-6-2017-q2-update/share/doc/gcc-arm-none-eabi/html/gdb/: gdbinit-man.html
core/gcc-arm-none-eabi-6-2017-q2-update/share/doc/gcc-arm-none-eabi/info/: bfd.info  gcc.info  gccinstall.info  gccint.info  gdb.info
core/gcc-arm-none-eabi-6-2017-q2-update/share/doc/gcc-arm-none-eabi/man/man1/: arm-none-eabi-as.1  arm-none-eabi-cpp.1  arm-none-eabi-gcc.1  arm-none-eabi-gcov-dump.1  arm-none-eabi-gcov-tool.1  arm-none-eabi-gcov.1  arm-none-eabi-gdb.1  arm-none-eabi-gdbserver.1  arm-none-eabi-ld.1
core/gcc-arm-none-eabi-6-2017-q2-update/share/doc/gcc-arm-none-eabi/man/man5/: arm-none-eabi-gdbinit.5-py
core/gcc-arm-none-eabi-6-2017-q2-update/share/doc/gcc-arm-none-eabi/man/man7/: fsf-funding.7  gfdl.7  gpl.7
