#-------------------------------------------------------------------------------------------------
# cmake 的最低版本为 3.9
#-------------------------------------------------------------------------------------------------
cmake_minimum_required(VERSION 3.9)

#-------------------------------------------------------------------------------------------------
# 不允许CMAKE内部编译
#-------------------------------------------------------------------------------------------------
if("${CMAKE_SOURCE_DIR}" STREQUAL "${CMAKE_BINARY_DIR}")
  message(FATAL_ERROR "FATAL: In-source builds are not allowed.
       You should create a separate directory for build files.")
endif()

#-------------------------------------------------------------------------------------------------
# 系统自检
#-------------------------------------------------------------------------------------------------
include(stm32_system_index)

#-------------------------------------------------------------------------------------------------
# 创建工程, 立即加载 toolchain_file
#-------------------------------------------------------------------------------------------------
project(${STM32_CHIP})
enable_language(ASM)

#-------------------------------------------------------------------------------------------------
# 配置可执行文件与库的存储路径 
#-------------------------------------------------------------------------------------------------
# if(${CMAKE_BUILD_TYPE} MATCHES "Release")
# set(STM32_OUTPUT_PATH ${STM32_TOP_DIR}/STM32${STM32_FAMILY}/STM32${STM32_PRODUCT_TYPE}${STM32_DEVICE_SUBFAMILY})
# execute_process(COMMAND mkdir -p ${PROJECT_BINARY_DIR}/bin)
set(EXECUTABLE_OUTPUT_PATH "${PROJECT_BINARY_DIR}/bin")
set(LIBRARY_OUTPUT_PATH "${PROJECT_BINARY_DIR}/lib")

#-------------------------------------------------------------------------------------------------
# 针对ST不同型号的产品加载不同的子配置
#-------------------------------------------------------------------------------------------------
string(TOLOWER ${STM32_FAMILY} STM32_FAMILY_LOWER)
include(toolchain_stm32${STM32_FAMILY_LOWER})

#-------------------------------------------------------------------------------------------------
# 加载公共函数和宏
#-------------------------------------------------------------------------------------------------
include(stm32_functions_and_macros)

#-------------------------------------------------------------------------------------------------
# 加载工具包管理器
#-------------------------------------------------------------------------------------------------
add_subdirectory(core/ToolKits)

#-------------------------------------------------------------------------------------------------
# 加载文档管理器
#-------------------------------------------------------------------------------------------------
# add_subdirectory(Documentations)

#-------------------------------------------------------------------------------------------------
# 子工程入口
#-------------------------------------------------------------------------------------------------
add_subdirectory(ST/STM32${STM32_FAMILY})
